--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -76,10 +76,10 @@
                 <my-stl file="base.stl"></my-stl>
             </ui-flex>
             <ui-flex flex="1">
-                <my-stl file="tile-blank.stl" rotation-x="270"></my-stl>
+                <my-stl file="tile-blank.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
             </ui-flex>
             <ui-flex flex="1">
-                <my-stl file="rig.stl"></my-stl>
+                <my-stl file="rig.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
             </ui-flex>
         </ui-flex>
         <ui-flex>
@@ -94,13 +94,17 @@
         <p>Once trying out the system with the above tiles you can move to printing some of the more decorative tiles.</p>
         <ui-flex>
             <ui-flex flex="1">
-                <my-stl file="tile-brick.stl" rotation-x="270"></my-stl>
+                <my-stl file="tile-blank-broken-1.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
             </ui-flex>
             <ui-flex flex="1">
-                <my-stl file="tile-brick-arrow.stl" rotation-x="270"></my-stl>
+                <my-stl file="tile-blank-grate.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
             </ui-flex>
-            <ui-flex flex="1"></ui-flex>
-            <ui-flex flex="1"></ui-flex>
+            <ui-flex flex="1">
+                <my-stl file="tile-brick.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
+            </ui-flex>
+            <ui-flex flex="1">
+                <my-stl file="tile-brick-arrow.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
+            </ui-flex>
         </ui-flex>
         <ui-flex>
             <ui-flex flex="3" column class="mr-2">
