--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -57,7 +57,7 @@
                             </li>
                             <li>
                                 <ui-icon path={mdiChevronRight}></ui-icon>
-                                Walls use 4x4x4 cyclinder magnets
+                                Walls use 4x4x4mm cyclinder magnets
                             </li>
                             <li>
                                 <ui-icon path={mdiCommentAlert}></ui-icon>
