More base items.

--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -90,9 +90,13 @@
                 <my-stl file="wall-full.stl" rotation-y="180" rotation-z="180"></my-stl>
             </div>
             <div class="flex-spacer"></div>
-            <div class="flex-item"></div>
+            <div class="flex-item">
+                <my-stl file="wall-half.stl" rotation-y="180" rotation-z="180"></my-stl>
+            </div>
             <div class="flex-spacer"></div>
-            <div class="flex-item"></div>
+            <div class="flex-item">
+                <my-stl file="wall-quarter.stl" rotation-y="180" rotation-z="180"></my-stl>
+            </div>
             <div class="flex-spacer"></div>
             <div class="flex-item"></div>
         </div>
