--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -98,7 +98,9 @@
                 <my-stl file="wall-quarter.stl" rotation-y="180" rotation-z="180"></my-stl>
             </div>
             <div class="flex-spacer"></div>
-            <div class="flex-item"></div>
+            <div class="flex-item">
+                <my-stl file="wall-corner.stl" rotation-y="180" rotation-z="180"></my-stl>
+            </div>
         </div>
         <h2>Everything Else...</h2>
         <p>Once trying out the system with the above tiles you can move to printing some of the more decorative tiles.</p>
