--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -40,7 +40,7 @@
             <div class="content">
                 <h2>Getting Started</h2>
                 <p>All STL files need to be scaled to <code>50%</code>. Start by printing several <code>top.stl</code>, <code>base.stl</code>, and <code>tile-blank.stl</code> models. Print one <code>rig.stl</code> file as a way to align <code>top</code> and <code>tile-*</code> models while gluing them together.</p>
-                <p>Print a few walls to get an idea of how the magnets connect between tiles. After deciding if this system works for your gameplay move on to the decorative tiles.</p>
+                <p>Print a few walls to get an idea of how the magnets connect between tiles. These print best with a <code>3mm</code> raft. After deciding if this system works for your gameplay move on to the decorative tiles.</p>
             </div>
             <div class="details">
                 <ui-card class="mt-5">
