--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:creator" content="@Templarian">
+        <meta name="twitter:title" content="Magnetic Tiles">
+        <meta name="twitter:description" content="D20 Magnetic 1.25 inch tiles.">
+        <meta name="twitter:image" content="https://templarian.github.io/magnetic-tiles/resources/twitter-card.png">
         <link rel="shortcut icon" href="/resources/favicon.ico" />
         <script src="/stl_viewer.min.js"></script>
     </head>
