--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -136,7 +136,7 @@
             <div class="content">
                 <h2>Want to Contribute?</h2>
                 <p>Each of the <code>tile-*</code> and <code>wall-*</code> models follow the same specs allowing for easy contribution from those that know any 3D Software.</p>
-                <p>These were all built in TinkerCAD a free online software for creating 3D models.</p>
+                <p>These were all built in <a href="https://www.tinkercad.com/" target="_blank">TinkerCAD</a> a free online software for creating 3D models.</p>
             </div>
             <div class="details">
                 <ui-card class="mt-5">
