--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -133,6 +133,17 @@
             </div>
         </div>
         <div class="flex">
+            <div class="flex-item">
+                <my-stl file="tile-stairs.stl" rotation-x="6.0" rotation-y="0.3"></my-stl>
+            </div>
+            <div class="flex-spacer"></div>
+            <div class="flex-item"></div>
+            <div class="flex-spacer"></div>
+            <div class="flex-item"></div>
+            <div class="flex-spacer"></div>
+            <div class="flex-item"></div>
+        </div>
+        <div class="flex">
             <div class="content">
                 <h2>Want to Contribute?</h2>
                 <p>Each of the <code>tile-*</code> and <code>wall-*</code> models follow the same specs allowing for easy contribution from those that know any 3D Software.</p>
